--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="my_api_key">c66bf420</string>
     <string name="search">Search</string>
     <string name="enter_query_params_here">enter query params here</string>
+    <string name="movie_details">Movie Details</string>
 </resources>
