--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="search">Search</string>
     <string name="enter_query_params_here">enter query params here</string>
     <string name="movie_details">Movie Details</string>
+    <string name="actor_details">Actor Details</string>
 </resources>
